Changes with Apache 1.3.17

  *) Handle port numbers in Host headers properly again after
     the code was broken in 1.3.15. [Tony Finch]

Changes with Apache 1.3.16

  *) None from 1.3.15

Changes with Apache 1.3.15

  *) Fix a new problem introduced with the -k config syntax, that the
     service installed with the -i flag would attempt to re-install
     itself when starting the server.  [William Rowe, Andrew Braund]

  *) Fix the declaration of the module structure in mod_example.
     PR#7095 [Gururaj Upadhye <gururaj@enertec.com>]

  *) Fix the handling of variable expansion look-ahead in mod_rewrite,
     i.e. syntax like %{LA-U:REMOTE_USER}, and also fix the parsing of
     more complicated nested RewriteMap lookups. PR#7087 [Tony Finch]

  *) Fix the RFC number mentioned when complaining about a missing
     Host: header. PR#7079 [Alexey Toptygin <alexeyt@wam.umd.edu>]

  *) Fix Range header processing to properly parse the syntax specified
     in RFC 2616, and properly handle unsatisfiable requests by returning
     a 416 error. PR#6973 [Tony Finch, William Rowe]

  *) Remove some human-readable fluff from the machine-readable mod_status
     display. PR#7025 [Youichirou Koga <y-koga@apache.or.jp>]

  *) The new Win32 command line option, -k config, replaces the default
     options for the existing, named service with the options given on 
     the -k config command line.  Apache -n servicename -t now displays
     the default options before it tests the httpd.conf.  Use the syntax
     apache -k config -n servicename -f conffile to upgrade an existing
     1.3.x service to the new 1.3.15 default arguments.  [William Rowe]

  *) All Win32 services now support default command line options when
     starting an Apache service.  The command line options given with
     the apache -k install command, including -d, -f, -D, -C and -c, 
     are all saved in the registry.  This change superceeds the old