@@ -1,5 +1,13 @@
 Changes with Apache 1.3.17
 
+  *) Fixed ap_os_canonical_filename to append a the default volume 
+     name if the the path is a full path and does not include the
+     volume name.  Since NetWare's current working directory always 
+     defaults to the SYS: volume regardless of where the executible 
+     started, the default volume will be the volume that is specified 
+     in ap_server_root.  This corrects mod_userdir/Netware reports
+     PR5826 & 6283.  [Brad Nicholes <BNICHOLES@novell.com>]
+
   *) Handle port numbers in Host headers properly again after
      the code was broken in 1.3.15. [Tony Finch]
 
